feat: add nova operational status
